Wayfare MVP Version 2

--- a/src/wayfare_frontend/src/BusProviders.scss
+++ b/src/wayfare_frontend/src/BusProviders.scss
@@ -54,7 +54,7 @@ $card-background: #fff;
 
     .provider-logo {
       width: 80px;
-      height: auto;
+      height: 80px;
     }
 
     .provider-image {
